src/objects/Location__c.object
<CustomObject>
    <description>This will allow for multiple nested locations of a given employer.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will alllow nesting of locations</description>
        <label>Parent Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Area/Campus</fullName>
                </value>
                <value>
                    <fullName>Suite_Floor</fullName>
                </value>
                <value>
                    <fullName>Building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Location</label>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>